--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,8 @@
   </head>
   <body>
     <app-root></app-root>
+    <div id="wcb" class="carbonbadge wcb-d"></div>
+    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+    
   </body>
 </html>
