--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Anshuman Kumar is a full-stack developer with experience in building responsive and scalable web applications using Google Cloud Platform, RASA, Dialogflow, React, Angular and Nodejs. Check out his resume to learn more about his skills and projects.">
     <title>Blog</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
