--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Anshuman Kumar is a full-stack developer with experience in building responsive and scalable web applications using Google Cloud Platform, RASA, Dialogflow, React, Angular and Nodejs. Check out his resume to learn more about his skills and projects.">
+    <meta property="og:title" content="Anshuman Kumar's Blog">
+    <meta property="og:description" content="My Blog where I share my two cents about tech, movies, coding, etc.">
     <title>Blog</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
