Update meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Anshuman Kumar is a full-stack developer with experience in building responsive and scalable web applications using Google Cloud Platform, RASA, Dialogflow, React, Angular and Nodejs. Check out his resume to learn more about his skills and projects.">
+    <meta name="description" content="Anshuman Kumar is an AI consultant with experience in developing solutions using the latest and greatest AI technologies, buiilding responsive and scalable web applications using Google Cloud Platform, AWS, RASA, Dialogflow, React, Angular and Nodejs. Check out his resume to learn more about his skills and projects.">
     <meta property="og:title" content="Anshuman Kumar's Blog">
     <meta property="og:description" content="My Blog where I share my two cents about tech, movies, coding, etc.">
     <title>Blog</title>
